files/configurations/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels: {app: my-app}
    name: my-app
    namespace: my-namespace
spec:
    replicas: 3

    minReadySeconds: 30
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 0
            maxSurge: 1

    selector: {matchLabels: {app: my-app}}
    template:
        metadata: {labels: {app: my-app}}
        spec:
            containers:
              - name: my-app
                image: nginx
