files/configurations/kubernetes/service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
    labels: {app: my-app}
    name: my-app-service
    namespace: my-namespace
spec:
    type: ExternalName
    externalName: my.database.example.com
