files/configurations/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    labels: {app: my-app}
    name: my-app-service
    namespace: my-namespace
spec:
    type: ClusterIP
    externalTrafficPolicy: Local
    selector: {app: my-app}
    ports:
      - {name: http, protocol: TCP, port: 80, targetPort: 80}
