files/configurations/kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    labels: {app: my-app}
    name: my-app
    namespace: production
spec:
    tls:
      - secretName: my-domain-com-tls
        hosts:
          - my-domain.com
    rules:
      - host: my-domain.com
        http:
            paths:
              - {path: '/my-other-app', pathType: Prefix, backend: {service: {name: my-other-app, port: {name: http}}}}
              - {path: '/', pathType: Prefix, backend: {service: {name: my-app, port: {name: http}}}}

      # handle other domains, but without tls
      - http:
            paths:
              - {path: '/my-other-app', pathType: Prefix, backend: {service: {name: my-other-app, port: {name: http}}}}
              - {path: '/', pathType: Prefix, backend: {service: {name: my-app, port: {name: http}}}}
